force-app/main/default/objects/Lead/fields/Disqualified_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reasons__c</fullName>
    <label>Disqualified Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weak product fit/value proposition</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Poor follow up and communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>