force-app/main/default/objects/Lead/fields/Is_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Lead</label>
    <type>Checkbox</type>
</CustomField>