force-app/main/default/objects/Lead/fields/Other_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Source__c</fullName>
    <label>Other (Lead Source)</label>
    <type>TextArea</type>
</CustomField>