force-app/main/default/objects/Lead/fields/Other_Locations__c.field-meta.xml
<CustomField>
    <fullName>Other_Locations__c</fullName>
    <label>Other Location(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>