force-app/main/default/objects/Lead/fields/Personal_Contact_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Personal_Contact_Lead_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Contact (Lead Source)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>