force-app/main/default/objects/Lead/fields/Qualified_Date_Custom__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date_Custom__c</fullName>
    <label>Qualified Date (Custom)</label>
    <type>Date</type>
</CustomField>