force-app/main/default/objects/Lead/fields/Referree_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Referree_Lead_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referee (Lead Source)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referred Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>