force-app/main/default/objects/Lead/fields/Time_to_Qualify_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Qualify_Days__c</fullName>
    <formula>Qualified_Date_Custom__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between lead creation and qualification.</inlineHelpText>
    <label>Time to Qualify (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>