force-app/main/default/objects/Lead/fields/Time_to_Respond_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Respond_Days__c</fullName>
    <formula>First_Contact_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days between lead creation and first contact date.</inlineHelpText>
    <label>Time to Respond (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>