force-app/main/default/objects/Lead/fields/Turnover_Annual__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Annual__c</fullName>
    <inlineHelpText>Annual turnover in the Lead&apos;s base currency.</inlineHelpText>
    <label>Turnover (Annual)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>