force-app/main/default/objects/Lead/validationRules/Disualified_SpecifyReasons.validationRule-meta.xml
<ValidationRule>
    <fullName>Disualified_SpecifyReasons</fullName>
    <active>true</active>
    <description>The Disqualified Reason(s) field must be filled in when Lead is disqualified.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(Status, &quot;Unqualified&quot;),
ISBLANK( Disqualified_Reasons__c )
)</errorConditionFormula>
    <errorDisplayField>Disqualified_Reasons__c</errorDisplayField>
    <errorMessage>Specify Disqualified Reason(s).</errorMessage>
</ValidationRule>