force-app/main/default/objects/Lead/validationRules/Qualified_OtherLocations.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualified_OtherLocations</fullName>
    <active>false</active>
    <description>The Other Location(s) field must be filled in before a lead can be converted.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(Status, &quot;Qualified&quot;),
ISBLANK(Other_Locations__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Locations__c</errorDisplayField>
    <errorMessage>Specify Other Location(s).</errorMessage>
</ValidationRule>