force-app/main/default/objects/Lead/validationRules/Qualified_PrimaryLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualified_PrimaryLocation</fullName>
    <active>true</active>
    <description>The Primary Location field must be filled in before a lead can be converted.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(Status, &quot;Qualified&quot;),
ISBLANK(TEXT(Primary_Location__c))
)</errorConditionFormula>
    <errorDisplayField>Primary_Location__c</errorDisplayField>
    <errorMessage>Specify Primary Location.</errorMessage>
</ValidationRule>