force-app/main/default/objects/Lead/listViews/America_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>America_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Americas Queue</label>
    <queue>Americas_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>