force-app/main/default/objects/Lead/listViews/Multi_region_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Multi_region_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Multi-region Queue</label>
    <queue>Multi_region_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>